# openmp-game-of-life

./: .hgignore  CMakeLists.txt  GameGrid.cpp  GameGrid.h  GameGridParallel.cpp  GameGridParallel.h  GameGridParallelCol.cpp  GameGridParallelCol.h  GameGridParallelRow.cpp  GameGridParallelRow.h  InputGenerator.cpp  InputGenerator.h  collectdata.sh  main.cpp  nsweep.cpp  small_nsweep.cpp
MatrixProj/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  mm.cc  testVerify.m  tests.cpp
RenderManager/: CMakeLists.txt  RenderManager.cpp  RenderManager.h
docs/: GOFPerformance.m  Makefile  paper.tex  small_time.m  time_vs_size.m
